--- a/style.css
+++ b/style.css
@@ -31,9 +31,9 @@ body{
     display: flex;
     width: 670px;
     height: 440px;
-    border: 1px solid black;
+    border: 1px solid #f5f5f5;
     border-radius: 10px;
-    box-shadow: 2px 2px 4px #f5f5f5;
+    box-shadow: 2px 2px 4px #959595;
     margin: 150px auto;
 }
 
@@ -41,7 +41,6 @@ body{
     width: 50%;
     position: relative;
     padding: 30px;
-    margin: 0px;
     background-image: linear-gradient(#06d7c1, #50cc49);
     border-radius: 10px 0 0 10px;
 }
